tests/ui/repr/repr-disallow-on-variant.stderr
error: `#[repr]` attribute cannot be used on enum variants
  --> $DIR/repr-disallow-on-variant.rs:4:5
   |
LL |     #[repr(u8)]
   |     ^^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to enums

error: aborting due to 1 previous error

